[package]
name = "lal"
version = "3.10.0"
authors = ["Eirik Albrigtsen <sszynrae@gmail.com>", "Ben Cordero <bencord0@condi.me>"]
description = "A strict, language-agnostic build system and dependency manager"
documentation = "http://lalbuild.github.io/lal"
license = "MIT"
categories = ["command-line-utilities"]
keywords = ["package", "dependency", "build", "docker", "artifactory"]
readme = "README.md"
edition = "2018"

[badges]
github = { repository = "lalbuild/lal", branch = "master" }
coveralls = { repository = "lalbuild/lal", branch = "master" }

[[bin]]
doc = false
name = "lal"
path = "src/main.rs"

[dependencies]
ansi_term = "0.7.2"
chrono = "0.2"
clap = "2.27.1"
filetime = "0.1"
flate2 = "0.2"
hyper = "0.10.9"
hyper-native-tls = "0.3.0"
lazy_static = "1.4.0"
log = "0.3.5"
loggerv = "0.6.0"
openssl-probe = "0.1.1"
rand = "0.3.14"
regex = "0.1.55"
semver = "0.9.0"
serde = "1.0.24"
serde_derive = "1.0.24"
serde_json = "1.0.8"
sha1 = "0.3.0"
tar = "0.4.26"
walkdir = "1.0.7"
dirs = "2.0.2"
tempfile = "3"

[dependencies.indicatif]
optional = true
version = "0.3.3"

[features]
default = ["docker", "progress"]
docker = []
progress = ["indicatif"]
upgrade = []

[lib]
name = "lal"
path = "src/lib.rs"

[dev-dependencies]
fs_extra = "1.1.0"
parameterized-macro = "0.3.1"
